# Practice

./: .gitignore  CMakeLists.txt  C_miniProject.c  FunctionReciever.cpp  FunctionReciever.h  JavaProject.java  Practice.cpp  README.md  Test.cpp  Test.h  advanced_python_challenges.py  c_mini_project.c  cmake.py  cppFileTemplateCreater.py  cpp_file_template_creater.py  main.cpp  pythonChallenges.py  python_challenges.py
.github/workflows/: cmake-multi-platform.yml
Cosc459_Project/: interface.py  project_test.sql  testData.sql
Cosc459_Project/Templates/: employeePage.html  index.html  mainPage.html  search.html
Cosc459_Project/static/: main.js  style.css
TemperatureHumiditySensor/: check_server.py  main.py
TestCMake/: CMakeLists.txt
TestCMake/src/: CMakeLists.txt
include/: Practice.h
include/Test/: CMakeLists.txt  Practice.h
main/: CMakeLists.txt
src/: FunctionReciever.cpp  Practice.cpp
